Ensure 'Request for information' links don't break onto two lines

--- a/app/assets/stylesheets/components/_rfi-labels.scss
+++ b/app/assets/stylesheets/components/_rfi-labels.scss
@@ -5,6 +5,10 @@
 
   @include link-underline-on-hover;
 
+  a {
+    white-space: nowrap;
+  }
+
   .rfi-icon {
     margin-left: -1.7em;
   }
